--- a/page3.html
+++ b/page3.html
@@ -19,11 +19,11 @@
         </header>
         <h2>Chapters :</h2>
         <div class="chapter-list">
-            <button class="chapter-button">Chapter 1: Finland</button>
-            <button class="chapter-button">Chapter 2: Jeonsuu</button>
-            <button class="chapter-button">Chapter 3: Karelia map 1</button>
-            <button class="chapter-button">Chapter 4: Karelia map 2</button>
-            <button class="chapter-button">Chapter 5: Karelia map 3</button>
+            <a href="game.html" class="chapter-button">Chapter 1: Finland</a>
+            <a href="game.html" class="chapter-button">Chapter 2: Joensuu</a>
+            <a href="game.html" class="chapter-button">Chapter 3: Karelia map 1</a>
+            <a href="game.html" class="chapter-button">Chapter 4: Karelia map 2</a>
+            <a href="game.html" class="chapter-button">Chapter 5: Karelia map 3</a>
         </div>
         <footer>
             <div class="footer-icons">
